feat: add base navbar

--- a/apps/guide/src/components/SidebarLayout.astro
+++ b/apps/guide/src/components/SidebarLayout.astro
@@ -1,3 +1,8 @@
+---
+import { Navbar } from './Navbar';
+---
+
+<Navbar client:load />
 <main class="flex h-screen w-full items-center justify-center">
 	<div class="max-w-full">
 		<slot />
