--- a/apps/guide/src/components/SidebarLayout.astro
+++ b/apps/guide/src/components/SidebarLayout.astro
@@ -1,10 +1,72 @@
 ---
+import { Separator } from 'ariakit/separator';
+import { MarkdownLayoutProps } from 'astro';
+import { generateGithubURL } from '~/utils/generateGithubURL';
+import { ExternalLink } from './ExternalLink';
 import { Navbar } from './Navbar';
+import { Outline } from './Outline';
+
+type Props = MarkdownLayoutProps<{
+	title: string;
+	description: string;
+	category: string;
+}>;
+const { headings, frontmatter, url } = Astro.props;
 ---
 
+<script>
+	window.addEventListener('load', () => {
+		const headings = document.querySelectorAll(
+			'div.level-h1 > h1, div.level-h2 > h2, div.level-h3 > h3, div.level-h4 > h4',
+		);
+
+		const headingsObserver = new IntersectionObserver(
+			(entries) => {
+				entries.forEach((entry) => {
+					if (entry.isIntersecting) {
+						const location = window.location.toString().split('#')[0];
+						history.replaceState(null, '', location + '#' + entry.target.id);
+					}
+				});
+			},
+			{
+				root: null,
+				rootMargin: '-100px 0% -66%',
+				threshold: 1.0,
+			},
+		);
+
+		headings.forEach((heading) => headingsObserver.observe(heading));
+	});
+</script>
+
 <Navbar client:load />
-<main class="flex h-screen w-full items-center justify-center">
-	<div class="max-w-full">
-		<slot />
-	</div>
+
+<main class="pt-18 lg:pl-76 xl:pr-64">
+	<article class="opacity-90">
+		<div class="relative z-10 min-h-[calc(100vh_-_70px)] p-6 pb-20 shadow">
+			<h1 class="mb-2 flex text-4xl font-semibold">{frontmatter.title}</h1>
+			<p class="text-base font-normal dark:text-gray-400">{frontmatter.description}</p>
+
+			<Separator className="my-5 border-base" />
+
+			<div class="prose max-w-full">
+				<slot />
+			</div>
+
+			<div
+				class="h-[calc(100vh - 72px)] dark:bg-dark-600 border-base fixed top-[61px] right-0 bottom-0 z-20 hidden w-64 border-l bg-white pr-2 xl:block"
+			>
+				<Outline client:load headings={headings} />
+			</div>
+
+			<Separator className="my-5 border-base" />
+
+			<div class="flex flex-col space-y-5">
+				<div class="flex place-content-start">
+					<ExternalLink client:load href={generateGithubURL(url!)} title="Edit this page" />
+				</div>
+			</div>
+		</div>
+	</article>
 </main>
