feat: add discord components and code block

--- a/apps/guide/src/layouts/SidebarLayout.astro
+++ b/apps/guide/src/layouts/SidebarLayout.astro
@@ -1,4 +1,5 @@
 ---
+import '@code-hike/mdx/styles.css';
 import { MarkdownLayoutProps } from 'astro';
 import SidebarLayout from '../components/SidebarLayout.astro';
 import '../styles/main.css';
