feat(guide): add search menu

--- a/apps/guide/src/layouts/SidebarLayout.astro
+++ b/apps/guide/src/layouts/SidebarLayout.astro
@@ -2,6 +2,7 @@
 import '@code-hike/mdx/styles.css';
 import { MarkdownLayoutProps } from 'astro';
 import SidebarLayout from '../components/SidebarLayout.astro';
+import '../styles/cmdk.css';
 import '../styles/main.css';
 
 type Props = MarkdownLayoutProps<{
