--- a/apps/guide/src/components/SidebarLayout.astro
+++ b/apps/guide/src/components/SidebarLayout.astro
@@ -1,8 +1,8 @@
 ---
 import { Separator } from 'ariakit/separator';
 import type { MarkdownLayoutProps } from 'astro';
-import { ExternalLink, Header, Outline, SidebarItems } from '~/ui/components';
-import { generateGithubURL } from '~/utils/generateGithubURL.js';
+import { ExternalLink, Header, Outline, SidebarItems } from '../ui';
+import { generateGithubURL } from '../utils/generateGithubURL.js';
 
 const pages = await Astro.glob<{ category: string; description: string; title: string }>('../pages/**/*.mdx');
 
