--- a/apps/guide/src/components/SidebarLayout.astro
+++ b/apps/guide/src/components/SidebarLayout.astro
@@ -1,18 +1,15 @@
 ---
 import { Separator } from 'ariakit/separator';
-import { MarkdownLayoutProps } from 'astro';
-import { generateGithubURL } from '~/utils/generateGithubURL.js';
-import { ExternalLink } from './ExternalLink.jsx';
-import { Navbar } from './Navbar.jsx';
-import { Outline } from './Outline.jsx';
-import { SidebarItems } from './SidebarItems.jsx';
+import type { MarkdownLayoutProps } from 'astro';
+import { ExternalLink, Header, Outline, SidebarItems } from '../ui';
+import { generateGithubURL } from '../utils/generateGithubURL.js';
 
-const pages = await Astro.glob<{ category: string; title: string }>('../pages/**/*.mdx');
+const pages = await Astro.glob<{ category: string; description: string; title: string }>('../pages/**/*.mdx');
 
 type Props = MarkdownLayoutProps<{
-	title: string;
-	description: string;
 	category: string;
+	description: string;
+	title: string;
 }>;
 const { headings, frontmatter, url } = Astro.props;
 ---
@@ -43,14 +40,14 @@ const { headings, frontmatter, url } = Astro.props;
 	});
 </script>
 
-<Navbar client:load>
+<Header client:load searchPages={pages}>
 	<div class="flex flex-col gap-3 p-3 pb-32 lg:pb-12" slot="pages">
 		<SidebarItems client:load pages={pages} />
 	</div>
-</Navbar>
+</Header>
 
 <main class="pt-18 lg:pl-76 xl:pr-64">
-	<article class="opacity-90">
+	<article>
 		<div class="relative z-10 min-h-[calc(100vh_-_70px)] p-6 pb-20 shadow">
 			<h1 class="mb-2 flex text-4xl font-semibold">{frontmatter.title}</h1>
 			<p class="text-base font-normal dark:text-gray-400">{frontmatter.description}</p>
@@ -62,7 +59,7 @@ const { headings, frontmatter, url } = Astro.props;
 			</div>
 
 			<div
-				class="h-[calc(100vh - 72px)] dark:bg-[#151718] border-base fixed top-[61px] right-0 bottom-0 z-20 hidden w-64 border-l bg-white pr-2 xl:block"
+				class="h-[calc(100vh - 72px)] border-base fixed top-[61px] right-0 bottom-0 z-20 hidden w-64 border-l bg-white pr-2 dark:bg-[#151718] xl:block"
 			>
 				<Outline client:load headings={headings} />
 			</div>
