--- a/apps/guide/src/layouts/SidebarLayout.astro
+++ b/apps/guide/src/layouts/SidebarLayout.astro
@@ -2,8 +2,8 @@
 import '@code-hike/mdx/styles.css';
 import type { MarkdownLayoutProps } from 'astro';
 import SidebarLayout from '../components/SidebarLayout.astro';
-import '../styles/cmdk.css';
-import '../styles/main.css';
+import '../styles/cmdk.module.scss';
+import '../styles/main.module.scss';
 
 type Props = MarkdownLayoutProps<{
 	category: string;
