--- a/apps/guide/src/styles/main.css
+++ b/apps/guide/src/styles/main.css
@@ -72,12 +72,12 @@
 	}
 	body {
 		@apply bg-background text-foreground;
-		font-feature-settings: "rlig" 1, "calt" 1;
+		font-feature-settings: 'rlig' 1, 'calt' 1;
 	}
 }
 
 @media (max-width: 640px) {
-  .container {
-    @apply px-4;
-  }
+	.container {
+		@apply px-4;
+	}
 }
